[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UserInterface/PlayerHealthBar.gd" type="Script" id=1]
[ext_resource path="res://src/UserInterface/healthbartextures/Big bar/underhealthbar.png" type="Texture" id=2]
[ext_resource path="res://src/UserInterface/healthbartextures/Big bar/healthbarborder.png" type="Texture" id=3]
[ext_resource path="res://src/UserInterface/healthbartextures/Big bar/progresshealthbar.png" type="Texture" id=4]

[node name="HealthBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthUnder" type="TextureProgress" parent="."]
margin_right = 151.0
margin_bottom = 13.0
max_value = 4.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="."]
margin_right = 151.0
margin_bottom = 13.0
max_value = 4.0
value = 4.0
texture_progress = ExtResource( 4 )
tint_progress = Color( 0.0470588, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="."]

[node name="PulseTween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="FlashTween" type="Tween" parent="."]
